# spine_anaplot_tools

./: .gitignore  README.md
cafana/: CMakeLists.txt  Doxyfile.in  analysis.C  ccpi0Ana.cc  confusion.cc  cosmics.C  energycalib.cc  example.C  example.cc  muon2024.cc  ncpi0Ana.cc  sbruce2gundam.C  spine_benchmark.cc
cafana/include/: analysis.h  beaminfo.h  beaminfo_nc.h  cuts.h  mctruth.h  numu_variables.h  particle_cuts.h  particle_utilities.h  particle_variables.h  preprocessor.h  spinevar.h  srvar.h  utilities.h  variables.h
cafana/include/cosmics/: cuts_cosmics.h
cafana/include/muon2024/: cuts_muon2024.h  variables_muon2024.h
cafana/include/pi02024/: cuts_pi02024.h  cuts_pi02024.h~  cuts_pi02024_eff.h  cuts_pi02024_nophase.h  cuts_pi02024_phase.h  cuts_pi02024_temp.h  cuts_pi02024_trad.h  utilities_pi02024.h  utilities_pi02024.h~  utilities_pi02024_eff.h  utilities_pi02024_nophase.h  utilities_pi02024_phase.h  utilities_pi02024_trad.h  variables_pi02024.h  variables_pi02024.h~  variables_pi02024_eff.h  variables_pi02024_nophase.h  variables_pi02024_phase.h  variables_pi02024_trad.h
cafana/include/pi0ana/: cuts_ccpi0ana_nophase.h  cuts_ccpi0ana_phase.h  cuts_ccpi0ana_trad.h  cuts_ncpi00pana_phase.h  cuts_ncpi01pana_phase.h  cuts_ncpi0ana_nophase.h  cuts_ncpi0ana_phase.h  cuts_ncpi0ana_trad.h  cuts_pi0ana_nc.h  cuts_pi0ana_nc_0p.h  cuts_pi0ana_nc_g1p.h  cuts_pi0ana_nc_inc.h  cuts_pi0ana_nophase.h  cuts_pi0ana_nophase.h~  cuts_pi0ana_phase.h  cuts_pi0ana_phase.h~  cuts_pi0ana_trad.h  utilities_ccpi0ana_nophase.h  utilities_ccpi0ana_phase.h  utilities_ccpi0ana_trad.h  utilities_ncpi00pana_phase.h  utilities_ncpi01pana_phase.h  utilities_ncpi0ana_nophase.h  utilities_ncpi0ana_phase.h  utilities_ncpi0ana_trad.h  utilities_pi0ana_nc.h  utilities_pi0ana_nophase.h  utilities_pi0ana_nophase.h~  utilities_pi0ana_phase.h  utilities_pi0ana_phase.h~  utilities_pi0ana_trad.h  utilities_pi0ana_trad.h~  variables_ccpi0ana_nophase.h  variables_ccpi0ana_phase.h  variables_ccpi0ana_trad.h  variables_ncpi01pana_phase.h  variables_ncpi0ana_nophase.h  variables_ncpi0ana_phase.h  variables_ncpi0ana_trad.h  variables_pi0ana_nc.h  (+8 more)
cafana/macros/: analysis.C  cosmics.C  example.C  example_sbnd.C  muon2024mc.C
cafana/macros/icarus/: ccpi0AnaData.C  ccpi0AnaMC.C  confusion.C  energycalib.C  muon2024.C  pi02024.C  pi02024_eff.C  pi02024_gundam.C  pi0Ana.C  pi0AnaData.C  pi0AnaMC.C  pi0AnaNC.C  pi0MCAna.C  pi0MCAna_nc.C
cafana/macros/sbn/: example.C
cafana/macros/sbnd/: muon2024.C
gundam/: get_syst_cov.py  getstats.py  getstats.py~  muon_momentum_mag_bins.txt  plot_xsec.py  smearing.py  spine2gundam.C  spine2gundam.C~
spineplot/: analysis.py  analysis_syst.py  artists.py  config.toml  efficiency.py  example.ipynb  figure.py  get_syst_cov.py  pur_eff_analyzer.py  requirements.txt  roc.py  sample.py  setup_py.sh  spectra.py  spectra1d.py  spectra2d.py  spineplot.py  spinespectra.py  spinesyst.py  style.py  systematic.py  ternary.py  utilities.py  variable.py
spineplot/configurations/: cosmics.toml  muon2024.toml  muon2024_icarus.toml  muon2024_sbnd.toml
spineplot/configurations/common/: samples.toml  styles.toml  variables.toml
spineplot/configurations/muon2024/: variables.toml
spineplot/configurations/pi02024/: samples.toml  styles.toml
spineplot/configurations/pi0ana/: pi02024_icarus.toml~  pi02024_icarus_mc.toml  pi02024_icarus_mc_category_topology.toml~  pi02024_icarus_reco_mc_category_topology.toml  pi02024_icarus_true_mc_category.toml  pi02024_icarus_true_mc_category.toml~  pi02024_reco_mc_category_topology.toml~  reco_variables.toml~  samples.toml  samples.toml~  styles.toml  styles.toml~  true_variables.toml  true_variables.toml~  variables.toml~
spineplot/quick/: confusion.py  energycalib.py  evaluation.py  pi0_quick_config.toml  pi0ana.mplstyle  pi0mass.py  pi0mass.py~  pi0photonconvdist.py~  pur_eff_analyzer.py
spineplot/quick/CC/: eff_analyzer_data.py  energycalib.py  energycalib_data.py  energycalib_mc_data.py  pi0_quick_config.toml  pi0ana.mplstyle  pi0mass.py  pi0photonconvdist.py  pi0var.py  pur_eff_analyzer.py
spineplot/quick/NC/: pi0_quick_config.toml  pi0var.py
spineplot/styles/: default.mplstyle  muon2024.mplstyle
systematics/: CMakeLists.txt  CMakeLists_justin.txt~  CMakeLists_safe.txt~
systematics/configurations/: muon2024.toml  muon2024_icarus.toml  pi02024.toml  pi0ana.toml  pi0ana_sel.toml  pi0ana_sel.toml~  pi0ana_sig.toml  pi0ana_sig.toml~  pi0test.toml  pi0test.toml~
systematics/include/: configuration.h  detsys.h  systematic.h  trees.h  trees_dev.h  trees_gundam.h  utilities.h  weight_reader.h
systematics/safe/: CMakeLists.txt
systematics/safe/configurations/: muon2024.toml  muon2024_icarus.toml  pi0ana.toml~
systematics/safe/include/: configuration.h  detsys.h
systematics/safe/src/: configuration.cc
systematics/src/: configuration.cc  detsys.cc  main.cc  main_dev.cc  main_gundam.cc  main_gundam.cc~  main_og.cc  systematic.cc  trees.cc  trees_gundam.cc  trees_gundam.cc~  weight_reader.cc
(+17 files in other folders)
